Add new recipe, complete with body

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/cinnamon-rolls.html">Quick Cinnamon Rolls</a>
+    <ul></ul>
+    <li><a href="./recipes/cinnamon-rolls.html">Quick Cinnamon Rolls</a></li>
+    <li><a href="./recipes/bacon-cheese-bgr.html">Bacon, Onion and Cheese-Stuffed Burgers</a></li>
   </body>
 
 </html>
