--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul></ul>
     <li><a href="./recipes/cinnamon-rolls.html">Quick Cinnamon Rolls</a></li>
     <li><a href="./recipes/bacon-cheese-bgr.html">Bacon, Onion and Cheese-Stuffed Burgers</a></li>
+    <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
   </body>
 
 </html>
