Add style to website

--- a/recipes/bacon-cheese-bgr.html
+++ b/recipes/bacon-cheese-bgr.html
@@ -3,38 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>Bacon, Onion and Cheese-Stuffed Burgers</title>
+    <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body>
-    <h1>Bacon, Onion, and Cheese-Stuffed Burgers</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5094107.jpg&q=60&c=sc&orient=true&poi=auto&h=512" 
-    alt="A big burger consisting of lettuce, tomato, cheese, onion, bacon and meat, with some potatoes on the side" height="200">
-    <h3>The finished product</h3>
+    <h1 class="main-title">Bacon, Onion, and Cheese-Stuffed Burgers</h1>
 
-    <p>These wonderful cheese-stuffed burgers with bacon and caramelized onions are easy to adapt to suit different tastes. 
-      My kids, who normally don't have onions on their burgers, really enjoyed these. 
-      You can pan-fry them instead of grilling if you prefer.</p>
+    <div class="pic-desc">
+      <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5094107.jpg&q=60&c=sc&orient=true&poi=auto&h=512" 
+      alt="A big burger consisting of lettuce, tomato, cheese, onion, bacon and meat, with some potatoes on the side" height="200">
+      <h3 class="footnote">The finished product</h3>
+    
 
-    <h2>Ingredients</h2>
-    <ul>
-      <li>3 pounds ground beef</li>
-      <li>3 tablespoons barbecue sauce</li>
-      <li>½ teaspoon garlic powder</li>
-      <li>½ teaspoon ground black pepper</li>
-      <li>¼ teaspoon salt</li>
-      <li>½ pound bacon, cut into ¼ inch pieces</li>
-      <li>1 medium onion, finely chopped</li>
-      <li>¾ cup shredded Cheddar cheese</li>
-      <li>6 hamburger buns, split</li>
-    </ul>
+      <p>These wonderful cheese-stuffed burgers with bacon and caramelized onions are easy to adapt to suit different tastes. 
+          My kids, who normally don't have onions on their burgers, really enjoyed these. 
+          You can pan-fry them instead of grilling if you prefer.</p>
+    </div>
 
-    <h2>Steps</h2>
-    <ol>
-      <li><p>Mix ground beef, barbecue sauce, garlic powder, black pepper, and salt in a large mixing bowl, using your hands. Shape a small handful at a time (approximately 1/4 pound) into 12 thin patties. Lay patties out on a cookie sheet and cover with plastic wrap; place patties in the refrigerator.</p></li>
-      <li><p>Place bacon in a large skillet and cook over medium-high heat, turning occasionally, until evenly browned, about 5 minutes. Remove bacon from skillet with a slotted spoon and drain on paper towels. Reduce the heat to medium and cook onions in remaining bacon drippings until soft and just beginning to brown. Mix onions and bacon in a small bowl.</p></li>
-      <li><p>Preheat an outdoor grill for medium heat and lightly oil the grate.</p></li>
-      <li><p>Meanwhile, remove beef patties from the refrigerator; top 6 patties with 1- 1/2 tablespoons of bacon and onion mixture, and sprinkle with shredded cheese. Top each with one of the remaining patties and press the edges together to seal.</p></li>
-      <li><p>Grill stuffed patties until beef is no longer pink in the center, about 4 to 5 minutes per side. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C). Serve on hamburger buns with condiments of your choice.</p></li>
-    </ol>
+    <div class="ingredients">
+      <h2 class="ing-title">Ingredients</h2>
+      <ul>
+        <li>3 pounds ground beef</li>
+        <li>3 tablespoons barbecue sauce</li>
+        <li>½ teaspoon garlic powder</li>
+        <li>½ teaspoon ground black pepper</li>
+        <li>¼ teaspoon salt</li>
+        <li>½ pound bacon, cut into ¼ inch pieces</li>
+        <li>1 medium onion, finely chopped</li>
+        <li>¾ cup shredded Cheddar cheese</li>
+        <li>6 hamburger buns, split</li>
+      </ul>
+    </div>
+
+    <div class="steps">
+      <h2>Steps</h2>
+      <ol>
+        <li><p>Mix ground beef, barbecue sauce, garlic powder, black pepper, and salt in a large mixing bowl, using your hands. Shape a small handful at a time (approximately 1/4 pound) into 12 thin patties. Lay patties out on a cookie sheet and cover with plastic wrap; place patties in the refrigerator.</p></li>
+        <li><p>Place bacon in a large skillet and cook over medium-high heat, turning occasionally, until evenly browned, about 5 minutes. Remove bacon from skillet with a slotted spoon and drain on paper towels. Reduce the heat to medium and cook onions in remaining bacon drippings until soft and just beginning to brown. Mix onions and bacon in a small bowl.</p></li>
+        <li><p>Preheat an outdoor grill for medium heat and lightly oil the grate.</p></li>
+        <li><p>Meanwhile, remove beef patties from the refrigerator; top 6 patties with 1- 1/2 tablespoons of bacon and onion mixture, and sprinkle with shredded cheese. Top each with one of the remaining patties and press the edges together to seal.</p></li>
+        <li><p>Grill stuffed patties until beef is no longer pink in the center, about 4 to 5 minutes per side. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C). Serve on hamburger buns with condiments of your choice.</p></li>
+      </ol>
+    </div>
+
+    <br><br><br>
+    <a href="../index.html"> Back to Home</a>
 
   </body>
 
