--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul></ul>
-    <li><a href="./recipes/cinnamon-rolls.html">Quick Cinnamon Rolls</a></li>
-    <li><a href="./recipes/bacon-cheese-bgr.html">Bacon, Onion and Cheese-Stuffed Burgers</a></li>
-    <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
+    <h1 class="title">Odin Recipes</h1>
+    <div class="recipe-list">
+      <ul>
+        <li><a href="./recipes/cinnamon-rolls.html">Quick Cinnamon Rolls</a></li>
+        <li><a href="./recipes/bacon-cheese-bgr.html">Bacon, Onion and Cheese-Stuffed Burgers</a></li>
+        <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
+      </ul>
+    </div>
+
+    
   </body>
 
 </html>
