--- a/recipes/cinnamon-rolls.html
+++ b/recipes/cinnamon-rolls.html
@@ -3,50 +3,61 @@
   <head>
     <meta charset="utf-8">
     <title>Quick Cinnamon Rolls</title>
+    <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body>
     <h1>Quick Cinnamon Rolls</h1>
 
-    <img src="https://www.allrecipes.com/thmb/nZcHUDoOoiPguYeVuvINBM_sLxQ=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/241917-quick-cinnamon-rolls-DDMFS-4x3-cec81ae72b1244d6ad9054eb46f0675b.jpg" 
-    alt="A picture of a bunch of cinnamon rolls covered in icing" height="200">
+    <div class="pic-desc">
+      <img src="https://www.allrecipes.com/thmb/nZcHUDoOoiPguYeVuvINBM_sLxQ=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/241917-quick-cinnamon-rolls-DDMFS-4x3-cec81ae72b1244d6ad9054eb46f0675b.jpg" 
+      alt="A picture of a bunch of cinnamon rolls covered in icing" height="200">
 
-    <h3>The finished product</h3>
+      <h3 class="footnote">The finished product</h3>
 
-    <p>An easy cinnamon roll recipe made from scratch with no yeast, proofing, or kneading necessary! 
-      Just the thing for a quick breakfast treat. 
-      They're best enjoyed the day that they're made.</p>
+      <p>An easy cinnamon roll recipe made from scratch with no yeast, proofing, or kneading necessary! 
+        Just the thing for a quick breakfast treat. 
+        They're best enjoyed the day that they're made.</p>
+    </div>
+    
+    <div class="ingredients">
+      <h2>Ingredients:</h2>
+      <ul>
+        <li>3 tablespoons unsalted butter, melted, divided</li>
+        <li>2 cups all-purpose flour, plus more as needed</li>
+        <li>2 tablespoons white sugar</li>
+        <li>2 teaspoons baking powder</li>
+        <li>1 teaspoon kosher salt</li>
+        <li>3 tablespoons unsalted butter, softened</li>
+        <li>2/3 cup whole milk</li>
+        <li>1/4 cup white sugar</li>
+        <li>1/4 cup light brown sugar</li>
+        <li>2 teaspoons ground cinnamon</li>
+        <li>1 cup confectioners' sugar</li>
+        <li>4 ounces cream cheese, softened</li>
+        <li>¼ cup unsalted butter, softened</li>
+        <li>½ teaspoon vanilla extract</li>
+      </ul>
+    </div>
 
-    <h2>Ingredients:</h2>
-    <ul>
-      <li>3 tablespoons unsalted butter, melted, divided</li>
-      <li>2 cups all-purpose flour, plus more as needed</li>
-      <li>2 tablespoons white sugar</li>
-      <li>2 teaspoons baking powder</li>
-      <li>1 teaspoon kosher salt</li>
-      <li>3 tablespoons unsalted butter, softened</li>
-      <li>2/3 cup whole milk</li>
-      <li>1/4 cup white sugar</li>
-      <li>1/4 cup light brown sugar</li>
-      <li>2 teaspoons ground cinnamon</li>
-      <li>1 cup confectioners' sugar</li>
-      <li>4 ounces cream cheese, softened</li>
-      <li>¼ cup unsalted butter, softened</li>
-      <li>½ teaspoon vanilla extract</li>
-    </ul>
+    <div class="steps">  
+      <h2>Steps</h2>
+      <ol>
+        <li>Preheat the oven to 400 degrees F (200 degrees C). Brush an 8-inch square baking dish with 1 tablespoon of the melted butter.</li>
+        <li>To make the dough: Whisk flour, white sugar, baking powder, and salt together in a large bowl. Work 3 tablespoons softened butter into flour mixture using your hands until butter is lentil-sized.</li>
+        <li>Pour milk into flour-butter mixture and stir with a rubber spatula until a soft dough forms.</li>
+        <li>Turn dough out onto a well-floured work surface and roll dough into a 10- x 10-inch square. Brush surface of dough with remaining 2 tablespoons melted butter.</li>
+        <li>To make the filling: Whisk ¼ cup white sugar, brown sugar, and cinnamon together in a small bowl. Sprinkle 1 tablespoon cinnamon-sugar mixture in the bottom of the prepared baking dish. Sprinkle remaining cinnamon sugar over butter-brushed dough.</li>
+        <li>Roll dough around filling to form a log; cut log into 9 rolls about 1-inch wide; place rolls, cut-side up, in the prepared baking dish.</li>
+        <li>Bake in the preheated oven until rolls are puffed and lightly golden, 20 to 25 minutes.</li>
+        <li>To make the frosting: Beat confectioners' sugar, cream cheese, 1/4 cup softened butter, and vanilla extract together in a bowl until frosting is smooth.</li>
+        <li>Top hot cinnamon rolls with cream cheese frosting.</li>
 
-    <h2>Steps</h2>
-    <ol>
-      <li>Preheat the oven to 400 degrees F (200 degrees C). Brush an 8-inch square baking dish with 1 tablespoon of the melted butter.</li>
-      <li>To make the dough: Whisk flour, white sugar, baking powder, and salt together in a large bowl. Work 3 tablespoons softened butter into flour mixture using your hands until butter is lentil-sized.</li>
-      <li>Pour milk into flour-butter mixture and stir with a rubber spatula until a soft dough forms.</li>
-      <li>Turn dough out onto a well-floured work surface and roll dough into a 10- x 10-inch square. Brush surface of dough with remaining 2 tablespoons melted butter.</li>
-      <li>To make the filling: Whisk ¼ cup white sugar, brown sugar, and cinnamon together in a small bowl. Sprinkle 1 tablespoon cinnamon-sugar mixture in the bottom of the prepared baking dish. Sprinkle remaining cinnamon sugar over butter-brushed dough.</li>
-      <li>Roll dough around filling to form a log; cut log into 9 rolls about 1-inch wide; place rolls, cut-side up, in the prepared baking dish.</li>
-      <li>Bake in the preheated oven until rolls are puffed and lightly golden, 20 to 25 minutes.</li>
-      <li>To make the frosting: Beat confectioners' sugar, cream cheese, 1/4 cup softened butter, and vanilla extract together in a bowl until frosting is smooth.</li>
-      <li>Top hot cinnamon rolls with cream cheese frosting.</li>
+      </ol>
+    </div>
 
-    </ol>
+
+    <br><br><br>
+    <a href="../index.html"> Back to Home</a>
   </body>
 
 </html>
