--- a/recipes/pepperoni-pizza.html
+++ b/recipes/pepperoni-pizza.html
@@ -3,55 +3,68 @@
   <head>
     <meta charset="utf-8">
     <title>Pepperoni Pizza</title>
+    <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body>
     <h1>Pepperoni Pizza</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7833517.jpg&q=60&c=sc&orient=true&poi=auto&h=512" 
-    alt="A medium sized pepperoni pizza cut and ready to be eaten" height="200">
-    <h3>The finished product</h3>
-    <p>This pepperoni pizza recipe produces a quick and easy classic! Delicious homemade pizza crust and tomato sauce have never been easier.</p>
-
-    <h2>Ingredients</h2>
+    <div class="pic-desc">
+      <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7833517.jpg&q=60&c=sc&orient=true&poi=auto&h=512" 
+      alt="A medium sized pepperoni pizza cut and ready to be eaten" height="200">
+      <h3 class="footnote">The finished product</h3>
     
-    <h3>Pizza Sauce</h3>
-    <ul>
-      <li>½ cup water</li>
-      <li>½ (12 ounce) can CONTADINA Tomato Paste</li>
-      <li>1 teaspoon dried oregano, crushed</li>
-      <li>1 teaspoon dried basil, crushed</li>
-      <li>½ teaspoon garlic powder</li>
-      <li>½ teaspoon onion powder</li>
-      <li>½ teaspoon sugar</li>
-      <li>½ teaspoon salt</li>
-      <li>¼ teaspoon black pepper</li>
-    </ul>
+      <p>This pepperoni pizza recipe produces a quick and easy classic! Delicious homemade pizza crust and tomato sauce have never been easier.</p>
+    </div>
 
-    <h3>Pizza Crust</h3>
-    <ul>
-      <li>3 ¼ cups all-purpose flour, or more as needed</li>
-      <li>2 (.25 ounce) envelopes FLEISCHMANN'S Pizza Crust Yeast or RapidRise Yeast</li>
-      <li>1 tablespoon sugar</li>
-      <li>1 ½ teaspoons salt</li>
-      <li>1 ⅓ cups very warm water (120 degrees F to 130 degrees F)</li>
-      <li>⅓ cup oil</li>
-    </ul>
+    <div class="ingredients">
+      <h2>Ingredients</h2>
+      
+      <h3>Pizza Sauce</h3>
+      <ul>
+        <li>½ cup water</li>
+        <li>½ (12 ounce) can CONTADINA Tomato Paste</li>
+        <li>1 teaspoon dried oregano, crushed</li>
+        <li>1 teaspoon dried basil, crushed</li>
+        <li>½ teaspoon garlic powder</li>
+        <li>½ teaspoon onion powder</li>
+        <li>½ teaspoon sugar</li>
+        <li>½ teaspoon salt</li>
+        <li>¼ teaspoon black pepper</li>
+      </ul>
 
-    <h3>Toppings</h3>
-    <ul>
-      <li>1 cup shredded mozzarella cheese, or more to taste</li>
-      <li>1 (6 ounce) package HORMEL Pepperoni</li>
-    </ul>
 
-    <h2>Steps</h2>
-    <ol>
-      <li><p>Preheat the oven to 425 degrees F (220 degrees C). Grease two 12-inch pizza pans.</p></li>
-      <li><p>Make sauce: Whisk together water, tomato paste, oregano, basil, garlic powder, onion powder, sugar, salt, and pepper in a medium bowl until smooth. Set aside.</p></li>
-      <li><p>Make crust: Combine 2 cups flour, yeast, sugar, and salt in a large bowl. Add warm water and oil; mix until well blended, about 1 minute. Gradually add remaining flour, a little at a time, until a soft, sticky dough forms.</p></li>
-      <li><p>Transfer dough to a floured surface; knead until dough is smooth and elastic, about 4 minutes. Add more flour as needed. (If using RapidRise yeast, let dough rest, covered, for 10 minutes.)</p></li>
-      <li><p>Divide dough in half. Lightly flour your hands, then pat each piece of dough onto the prepared pizza pans.</p></li>
-      <li><p>Top dough with sauce, cheese, and pepperoni.</p></li>
-      <li><p>Bake in the preheated oven until crusts are browned and cheese is bubbly, 18 to 20 minutes. Rotate pizza pans between the top and bottom oven racks halfway through baking.</p></li>
-    </ol>
+      <h3>Pizza Crust</h3>
+      <ul>
+        <li>3 ¼ cups all-purpose flour, or more as needed</li>
+        <li>2 (.25 ounce) envelopes FLEISCHMANN'S Pizza Crust Yeast or RapidRise Yeast</li>
+        <li>1 tablespoon sugar</li>
+        <li>1 ½ teaspoons salt</li>
+        <li>1 ⅓ cups very warm water (120 degrees F to 130 degrees F)</li>
+        <li>⅓ cup oil</li>
+      </ul>
+
+      <h3>Toppings</h3>
+      <ul>
+        <li>1 cup shredded mozzarella cheese, or more to taste</li>
+        <li>1 (6 ounce) package HORMEL Pepperoni</li>
+      </ul>
+    </div>
+
+    <div class="steps">
+      <h2>Steps</h2>
+      <ol>
+        <li><p>Preheat the oven to 425 degrees F (220 degrees C). Grease two 12-inch pizza pans.</p></li>
+        <li><p>Make sauce: Whisk together water, tomato paste, oregano, basil, garlic powder, onion powder, sugar, salt, and pepper in a medium bowl until smooth. Set aside.</p></li>
+        <li><p>Make crust: Combine 2 cups flour, yeast, sugar, and salt in a large bowl. Add warm water and oil; mix until well blended, about 1 minute. Gradually add remaining flour, a little at a time, until a soft, sticky dough forms.</p></li>
+        <li><p>Transfer dough to a floured surface; knead until dough is smooth and elastic, about 4 minutes. Add more flour as needed. (If using RapidRise yeast, let dough rest, covered, for 10 minutes.)</p></li>
+        <li><p>Divide dough in half. Lightly flour your hands, then pat each piece of dough onto the prepared pizza pans.</p></li>
+        <li><p>Top dough with sauce, cheese, and pepperoni.</p></li>
+        <li><p>Bake in the preheated oven until crusts are browned and cheese is bubbly, 18 to 20 minutes. Rotate pizza pans between the top and bottom oven racks halfway through baking.</p></li>
+      </ol>
+    </div>
+
+
+    <br><br><br>
+    <a href="../index.html"> Back to Home</a>
   </body>
 
 </html>
