Add more complex styling to home

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1 class="title">Odin Recipes</h1>
     <div class="recipe-list">
-      <ul>
+      <ul class="ul-no-bullet">
         <li><a href="./recipes/cinnamon-rolls.html">Quick Cinnamon Rolls</a></li>
         <li><a href="./recipes/bacon-cheese-bgr.html">Bacon, Onion and Cheese-Stuffed Burgers</a></li>
         <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
