Add box model style to home

--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
   </head>
   <body>
     <h1 class="title">Odin Recipes</h1>
-    <div class="recipe-list">
-      <ul class="ul-no-bullet">
-        <li><a href="./recipes/cinnamon-rolls.html">Quick Cinnamon Rolls</a></li>
-        <li><a href="./recipes/bacon-cheese-bgr.html">Bacon, Onion and Cheese-Stuffed Burgers</a></li>
-        <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
+    <div class="recipe-list-card">
+      <ul class="recipe-list">
+        <li class="recipe-link"><a href="./recipes/cinnamon-rolls.html">
+          <img src="https://www.allrecipes.com/thmb/nZcHUDoOoiPguYeVuvINBM_sLxQ=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/241917-quick-cinnamon-rolls-DDMFS-4x3-cec81ae72b1244d6ad9054eb46f0675b.jpg" alt="Nine Cinnamon Rolls covered in frosting" height="100">
+          Cinnamon Rolls</a></li>
+        <li class="recipe-link"><a href="./recipes/bacon-cheese-bgr.html">
+          <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5094107.jpg&q=60&c=sc&orient=true&poi=auto&h=512" 
+          alt="A big burger consisting of lettuce, tomato, cheese, onion, bacon and meat, with some potatoes on the side" height="200">
+          Bacon, Onion and Cheese-Stuffed Burgers</a></li>
+        <li class="recipe-link"><a href="./recipes/pepperoni-pizza.html">
+          <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7833517.jpg&q=60&c=sc&orient=true&poi=auto&h=512" 
+          alt="A medium sized pepperoni pizza cut and ready to be eaten" height="200">  
+          Pepperoni Pizza</a></li>
       </ul>
-    </div>
+  </div>
 
     
   </body>
